zfsboot: add prototype for main()

Some compilers are complaining about missing prototype.

PR:		251150

(cherry picked from commit fc7cf7241f89a3d3ccc20cb49c5bf61e154b7a1b)