stand/i386/zfsboot/zfsboot.c
@@ -158,6 +158,8 @@ ptov(uintptr_t x)
 	return (PTOV(x));
 }
 
+int main(void);
+
 int
 main(void)
 {
